--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html{
+  background: rgb(229, 229, 229); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
