--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -2,29 +2,55 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 75vw;
-    height: 75vh;
+    width: 1200px;
+    height: 600px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 7px 1px #bdbdbd;    
 }
 
 .rubiks_container_header{
-    height: 20%;
+    height: 160px;
     width: 100%;
     background: red;
     text-align: center;
 }
 
 .rubiks_container_cube{
-    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 800px;
     width: 100%;
-    background: green;
+    background: rgb(96, 156, 96);
 }
 
 .rubiks_container_actions{
-    height: 20%;
+    height: 160px;
     width: 100%;
     background: blue;
 }
 
+.rubiks_panel_white{
+    background: white;
+}
+
+.rubiks_panel_green{
+    background: green;
+}
+
+.rubiks_panel_red{
+    background: red;
+}
+
+.rubiks_panel_yellow{
+    background: yellow;
+}
+
+.rubiks_panel_orange{
+    background: orange;
+}
+
+.rubiks_panel_blue{
+    background: blue;
+}
