--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -22,13 +22,29 @@
     align-items: center;
     height: 800px;
     width: 100%;
-    background: rgb(96, 156, 96);
+    background: rgb(0, 156, 83);
 }
 
 .rubiks_container_actions{
+    display: flex;
+    justify-content: center;
     height: 160px;
     width: 100%;
     background: blue;
+}
+
+.rubiks_cube_panel{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    background: black;    
+}
+
+.rubiks_cube_panel_item{
+    border: 1px solid black;    
+    height: 32.3%; 
+    width: 32.3%;    
 }
 
 .rubiks_panel_white{
