--- a/src/css/cubeAction.module.css
+++ b/src/css/cubeAction.module.css
@@ -1,6 +1,6 @@
 .action_container{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 80%;
     height: 100%;
@@ -13,20 +13,34 @@
 
 .middle_action_container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     width: 45%;
     background: pink;
 }
 
 .middle_clockwise_actions{
+    display: flex;
+    justify-content: center;
     width: 100%;
 }
 
 .middle_anticlockwise_actions{
+    display: flex;
+    justify-content: center;
     width: 100%;
 }
 
 .right_action_container{
     width: 20%;
     background: orange;
+}
+
+.movement_action_btn {
+    height: 32px;
+    width: 32px;
+    border-radius: 8px;    
+    text-align: center;
+    margin: 4px;
+    font-weight: bold;
 }
