--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 1200px;
-    height: 600px;
+    width: 1600px;
+    height: 900px;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 7px 1px #bdbdbd;    
@@ -20,8 +20,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 800px;
-    width: 100%;
+    height: 800px;    
+    height: 800px;    
     background: rgb(0, 156, 83);
 }
 
@@ -43,8 +43,9 @@
 
 .rubiks_cube_panel_item{
     border: 1px solid black;    
-    height: 32.3%; 
-    width: 32.3%;    
+    height: 33.3%; 
+    width: 33.3%;    
+    border-radius: none;
 }
 
 .rubiks_panel_white{
@@ -68,5 +69,5 @@
 }
 
 .rubiks_panel_blue{
-    background: blue;
+    background: rgb(134, 134, 255);
 }
