--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -1,4 +1,5 @@
 .rubiks_container{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -17,12 +18,41 @@
 }
 
 .rubiks_container_cube{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 800px;    
     height: 800px;    
     background: rgb(0, 156, 83);
+}
+
+.rubiks_container_start_panel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    background: #00000082;
+}
+
+.rubiks_start_panel_action{
+    height: 40px;
+    width: 200px;
+    margin: 20px;
+    background:white;
+    border: none;
+    border-radius: 20px;
+    transition: 0.25s ease-in;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.rubiks_start_panel_action:hover{
+    background: black;
+    color: white;
 }
 
 .rubiks_container_actions{
