solved functionality added, jest and playwright tests complete

--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -38,6 +38,11 @@
     background: #00000082;
 }
 
+.rubiks_start_panel_solved{
+    color: white;
+    font-weight: bold;
+}
+
 .rubiks_start_panel_action{
     height: 40px;
     width: 200px;
