--- a/src/css/cubeAction.module.css
+++ b/src/css/cubeAction.module.css
@@ -11,12 +11,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background: rgb(221, 231, 245);
+    background: rgb(255 255 255);
     border-color: rgb(211, 224, 233);    
     color: rgb(100, 116, 139);        
-    border-radius: 50px;    
+    border-radius: 10px;    
     height: 60px;
     width: 90px;
+    transition: 0.25s ease-in;
+    cursor: pointer;
+}
+
+.action_container_btn:hover{
+    background: black;
+    color: white;
 }
 
 .left_action_container{    
@@ -60,18 +67,26 @@
     left: -20px;
     width: 220px;
     background:  rgb(221, 231, 245);
+    color: rgb(100, 116, 139);;
     border-radius: 10px;
     padding: 8px 20px;    
 }
 
 .movement_action_btn {
-    height: 34px;
-    width: 34px;
-    border-radius: 8px;    
+    height: 36px;
+    width: 36px;
+    border-radius: 10px;    
     text-align: center;
     margin: 4px;
     font-weight: bold;
-    background: rgb(221, 231, 245);
+    background: rgb(255 255 255);
     border-color: rgb(211, 224, 233);    
-    color: rgb(100, 116, 139)
+    color: rgb(100, 116, 139);
+    transition: 0.25s ease-in;
+    cursor: pointer;    
+}
+
+.movement_action_btn:hover{
+    background: black;
+    color: white;
 }
