--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,30 @@
   box-sizing: border-box;
 }
 
-body{
+html{
+  background-color: #FF3CAC;
+  background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
   overflow: auto;
+  height: 100%;  
+  width: 100%;
+}
+
+body{
+  height: 100%;
+  width: 100%;
+  overflow: auto;    
+}
+
+#root{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App {
+  height: 100%;
   text-align: center;
 }
 
