--- a/src/css/defaultCube.module.css
+++ b/src/css/defaultCube.module.css
@@ -3,8 +3,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    height: 500px;
     width: 600px;    
+    margin-top: -40px;
 }
 
 .default_cube_modifier{
@@ -57,3 +58,30 @@
 .default_cube_top_rotated_back{                
     transform: rotate(-60deg) skewY(30deg) scaleY(1.16);    
 }
+
+
+.default_cube_action_btn{
+    background: none;
+    outline: none;
+    border: none;
+    transform: scale(1.6);
+    cursor: pointer;
+    animation: 2s ease-in;
+}
+
+.default_cube_action_btn svg{
+    color: rgb(24, 80, 203) ;
+    animation: 0.5s ease-in;
+}
+
+.default_cube_action_btn svg:hover{
+    color: black;
+    transform: scale(1.2);
+}
+
+
+.cube_action_flip_btn{
+    position: absolute;    
+    bottom: 80px;
+}
+
