--- a/src/css/rubiks.module.css
+++ b/src/css/rubiks.module.css
@@ -3,12 +3,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 1200px;
-    height: 700px;
-    background: white;
+    width: 80%;
+    height: 80%;
+    background: rgb(248, 248, 248);
     border-radius: 10px;
-    box-shadow: 0px 0px 7px 1px #bdbdbd;    
-    overflow: hidden;    
+    overflow: auto;    
 }
 
 .rubiks_container_header{
@@ -17,8 +16,8 @@
     align-items: center;
     height: 160px;
     width: 100%;
-    background: rgb(248, 248, 248);
-    color: rgb(100, 116, 139);    
+    background:white;
+    color: rgb(24, 80, 203) ;
 }
 
 .rubiks_container_cube{
@@ -67,7 +66,7 @@
     justify-content: center;
     height: 160px;
     width: 100%;    
-    background: rgb(248, 248, 248);        
+    background:white;  
 }
 
 .rubiks_cube_panel{
